--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "moment": "^2.30.1",
     "mysql2": "^3.10.3",
+    "nodemon": "^3.1.4",
     "sequelize": "^6.37.3"
   }
 }
